Fix spacing issue w/ info div

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ input {
 }
 
 #info {
+  margin-top: -30vh;
   width: 100vw;
   gap: 60px;
   display: none;
